# glm-token-monitor

./: .gitignore  ACCEPTANCE.md  CLAUDE.md  CODE_REVIEW.md  PROMPT.md  README.md  README_EN.md  TASKS.md  index.html  package-lock.json  package.json  test-notes-water-level.md  vite.config.ts  桌面悬浮窗口 + 系统托盘组合实现方案.md
.claude/: settings.local.json
.github/: GUIDE.md
.github/workflows/: build.yml  ci.yml
.ralph/: current-events  current-loop-id  events-20260417-144202.jsonl  history.jsonl
.ralph/agent/: handoff.md  scratchpad.md  summary.md
docs/: API配置提示优化.md  侧边悬浮卡片优化.md  窗口配置修复.md
docs/plans/: 2026-04-04-hover-expand-window-design.md  2026-04-04-hover-expand-window.md  2026-04-04-plan-guard-design.md  2026-04-04-plan-guard.md  2026-04-11-pet-gradient-color-design.md  2026-04-11-pet-gradient-color-implementation.md  2026-04-11-water-tank-effect-design.md  2026-04-11-water-tank-effect-implementation.md
src/: App.vue  settings-entry.ts  style.css
src-tauri/: Cargo.toml  info-panel.html  settings.html  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  database.rs  events.rs  main.rs  notifications.rs  polling.rs  settings_commands.rs  tray.rs  windows.rs
src/components/: HistoryPanel.vue  InfoPanel.vue  NotificationSettings.vue  PetWidget.vue  PopoverPanel.vue  SettingsPanel.vue  UsageChart.vue
src/composables/: usePetAction.ts  usePetDialogue.ts  usePetEffects.ts  usePetMood.ts  usePlatform.ts  useSettings.ts  useTauriEvents.ts  useTheme.ts  useUsageState.ts
src/types/: config.ts
windows/: info-panel.html  settings.html
(+6 files in other folders)
